deploy/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foton-api
  namespace: foton
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foton-api
  template:
    metadata:
      labels:
        app: foton-api
    spec:
      containers:
        - name: api
          image: seu-usuario-dockerhub/foton-api:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foton-api
  namespace: foton
spec:
  selector:
    app: foton-api
  ports:
    - port: 8080
      targetPort: 8080
